--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
             <p>ghfhjgfhtfhgfhgfjfhgfhtfhgmf nbfhgkfth hgfgjhfj hfgjkhfv hgdfh gfhgc gcfghc hgfhgfc </p>
             <div class="btn-box">
               <a href="#" class="btn">Hire Me</a>
-              <a href="#" class="btn">Lets Talk</a>
+              <a href="#contact" class="btn">Lets Talk</a>
             </div>
           </div>
         </div>
 
         <div class="home-sci">
-          <a href="#"><i class='bx bxl-facebook'></i></a>
-          <a href="#"><i class='bx bxl-twitter'></i></a>
-          <a href="#"><i class='bx bxl-linkedin'></i></a>
+          <a href="https://www.instagram.com/vishu_phogat"><i class='bx bxl-instagram'></i></a>
+          <a href="https://twitter.com/phogat_3103"><i class='bx bxl-twitter'></i></a>
+          <a href="https://www.linkedin.com/in/vishu-phogat-111918278/"><i class='bx bxl-linkedin'></i></a>
         </div>
 
         <div class="home-imgHover"></div>
