--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
 
-        <form action="index.html" method="post">
+        <form action="mailto:vishu.34343@gmail.com" method="post">
           <div class="input-box">
             <div class="input-field">
               <input type="text" placeholder="Full Name" required>
