--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
                 <h3>TinDog Website</h3>
                 <p>Clone of website TinDog.
                 A dating website for dogs nearby your area or society.</p>
-                <a href="#"><i class='bx bx-link-external'></i></a>
+                <a href="https://vishu-phogat.github.io/Tindog/"><i class='bx bx-link-external'></i></a>
               </div>
           </div>
           <div class="work">
             <img src="photos/image2.jpg" alt="">
             <div class="layer">
               <h3>Notepad website</h3>
-              <p>Clone of website TinDog.
-              A dating website for dogs nearby your area or society.</p>
+              <p>this website is used to write down important notes
+              related to a persons life.</p>
               <a href="#"><i class='bx bx-link-external'></i></a>
             </div>
           </div>
