--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
-          <img src="photos/phomtu.png" alt="">
+          <img src="photos/vishupic.jpeg" alt="">
           <span class="circle-spin"></span>
         </div>
 
