--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="text-animate">
             <!-- <h3>Frontend development</h3> -->
              <span id="element"></span>
-            <p>ghfhjgfhtfhgfhgfjfhgfhtfhgmf nbfhgkfth hgfgjhfj hfgjkhfv hgdfh gfhgc gcfghc hgfhgfc </p>
+            <p> C++ | JAVA | HTML | CSS | JAVASCRIPT | REACT.JS | MY SQL | TYPE.JS| NODE.JS| EXPRESS.JS </p>
             <div class="btn-box">
               <a href="#" class="btn">Hire Me</a>
               <a href="#contact" class="btn">Lets Talk</a>
@@ -62,7 +62,7 @@
         </div>
 
         <div class="about-content">
-          <h3>Frontend developer!!</h3>
+          <h3>FullStack developer!!</h3>
           <p>bdjhfgadhjfcvahnfhjdavchdagchdgvcjhbdv dvcfjhdgc kudgfchjdsv gdckuds gdfcjysd gdhcjysdx jydfgcjyds
           dmscbdhsc hksdgfchjds hjsdgfcjhds hjdvfchjgds hdjsvchdjs hadgcvhjas jhadgvcghj hajdsvgch bhdbcfbdj
           d cdncdsvcbdsvdcgvsbncvdsgnfvcgdsvcbnsdvnhcvadgjvcdgnsvcbmsdvngcvdsg dsvcgdvs dgvcjgdsv sdcjgdsv sgjdc
