--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <a href="https://www.instagram.com/vishu_phogat"><i class='bx bxl-instagram'></i></a>
           <a href="https://twitter.com/phogat_3103"><i class='bx bxl-twitter'></i></a>
           <a href="https://www.linkedin.com/in/vishu-phogat-111918278/"><i class='bx bxl-linkedin'></i></a>
+          <a href="https://github.com/Vishu-phogat"<i class='bx bxl-github'></i></a>
         </div>
 
         <div class="home-imgHover"></div>
