--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="text-animate">
             <!-- <h3>Frontend development</h3> -->
              <span id="element"></span>
-            <p> C++ | JAVA | HTML | CSS | JAVASCRIPT | REACT.JS | MY SQL | TYPE.JS| NODE.JS| EXPRESS.JS </p>
+            <p> C++ | JAVA | HTML | CSS | JAVASCRIPT | REACT.JS | MY SQL | TYPE.JS | NODE.JS | EXPRESS.JS | API | MongoDB | GIT | DOM </p>
             <div class="btn-box">
               <a href="#" class="btn">Hire Me</a>
               <a href="#contact" class="btn">Lets Talk</a>
@@ -64,11 +64,7 @@
 
         <div class="about-content">
           <h3>FullStack developer!!</h3>
-          <p>bdjhfgadhjfcvahnfhjdavchdagchdgvcjhbdv dvcfjhdgc kudgfchjdsv gdckuds gdfcjysd gdhcjysdx jydfgcjyds
-          dmscbdhsc hksdgfchjds hjsdgfcjhds hjdvfchjgds hdjsvchdjs hadgcvhjas jhadgvcghj hajdsvgch bhdbcfbdj
-          d cdncdsvcbdsvdcgvsbncvdsgnfvcgdsvcbnsdvnhcvadgjvcdgnsvcbmsdvngcvdsg dsvcgdvs dgvcjgdsv sdcjgdsv sgjdc
-          dbvfhsdhcbdsmcgskd hdgcjhdsv dgcjhdsv hgsdcngsdvbjgsdvcjgds jhscjgds hdsgcjghdsv jhdsvcjg </p>
-
+          <p>I have a strong foundation in full-stack web development, proficient in Java, C++, Python, HTML, CSS, JavaScript, Bootstrap, jQuery, Node.js, React.js, Express.js, and SQL with experience working on both frontend design and backend development. My expertise extends to PostgreSQL, APIs, DOM manipulation, Git, and MATLAB, with hands-on experience in building and deploying scalable e-commerce websites, portfolio platforms, and productivity applications. I also have practical exposure to Spring Boot, Hibernate, and MySQL, enabling me to contribute effectively to enterprise-level applications. </p>
           <div class="btn-box btns">
             <a href="#" class="btn">Read More</a>
           </div>
