--- a/index.html
+++ b/index.html
@@ -135,18 +135,18 @@
           <div class="work">
             <img src="photos/image2.jpg" alt="">
             <div class="layer">
-              <h3>Notepad website</h3>
+              <h3>Note Keeper website</h3>
               <p>this website is used to write down important notes
               related to a persons life.</p>
-              <a href="#"><i class='bx bx-link-external'></i></a>
+              <a href="https://vishu-phogat.github.io/note_keeper/"><i class='bx bx-link-external'></i></a>
             </div>
           </div>
           <div class="work">
             <img src="photos/image3.jpg" alt="">
             <div class="layer">
-              <h3>Cancelled Website</h3>
+              <h3>Uni Website</h3>
               <p>This is a Shopping Website and can be used to buy clothing products
-              for Men, Women, Children, etc.</p>
+              for Men, Women, Children, etc. It also includes userID and password for the customers.</p>
               <a href="#"><i class='bx bx-link-external'></i></a>
             </div>
           </div>
