--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
              <span id="element"></span>
             <p> C++ | JAVA | HTML | CSS | JAVASCRIPT | REACT.JS | MY SQL | TYPE.JS | NODE.JS | EXPRESS.JS | API | MongoDB | GIT | DOM </p>
             <div class="btn-box">
-              <a href="#" class="btn">Hire Me</a>
+              <a href="https://drive.google.com/file/d/1nCqkUms7__dhJo1_WApEH-i4Hg1yIDBl/view?usp=sharing" class="btn">Resume</a>
               <a href="#contact" class="btn">Lets Talk</a>
             </div>
           </div>
