--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
               <div class="education-content">
                 <div class="content">
                   <div class="year"><i class='bx bxs-calendar'></i>2020-2024</div>
-                  <h3>B.Tech - DTU</h3>
-                  <p>I have done my B.Tech Degree from Delhi Technological University in the branch of
-                    Electronics and communication Department. and right now i am in my last year of graduation.</p>
+                  <h3>Xth - Kendriya Vidyalaya Paschim Vihar</h3>
+                  <p>I have done my Xth class from Kendriya Vidyalaya Paschim Vihar from CBSE Boards
+                      and secured 8.4 CGPA.</p>
                 </div>
               </div>
 
               <div class="education-content">
                 <div class="content">
                   <div class="year"><i class='bx bxs-calendar'></i>2020-2024</div>
-                  <h3>B.Tech - DTU</h3>
-                  <p>I have done my B.Tech Degree from Delhi Technological University in the branch of
-                    Electronics and communication Department.and right now i am in my last year of graduation.</p>
+                  <h3>XIIth - Kendriya Vidyalaya Paschim Vihar</h3>
+                  <p>I have done my Xth class from Kendriya Vidyalaya Paschim Vihar from CBSE Boards
+                      and secured 83.3 % with PCM,english and compure science as my subjects.</p>
                 </div>
               </div>
 
