--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h3>FullStack developer!!</h3>
           <p>I have a strong foundation in full-stack web development, proficient in Java, C++, Python, HTML, CSS, JavaScript, Bootstrap, jQuery, Node.js, React.js, Express.js, and SQL with experience working on both frontend design and backend development. My expertise extends to PostgreSQL, APIs, DOM manipulation, Git, and MATLAB, with hands-on experience in building and deploying scalable e-commerce websites, portfolio platforms, and productivity applications. I also have practical exposure to Spring Boot, Hibernate, and MySQL, enabling me to contribute effectively to enterprise-level applications. </p>
           <div class="btn-box btns">
-            <a href="#" class="btn">Read More</a>
+            <a href="#education" class="btn">Read More</a>
           </div>
         </div>
       </section>
